W-13481782-release-notes-every-product

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,11 +1,11 @@
 .xref:index.adoc[Anypoint Visualizer]
 * xref:index.adoc[Anypoint Visualizer]
-* xref:release-notes::visualizer/anypoint-visualizer-1.0-release-notes.adoc[Release Notes]
 * xref:setup.adoc[Set up Anypoint Visualizer]
  ** xref:cloudhub-setup.adoc[CloudHub Setup]
  ** xref:standalone-mule-setup.adoc[Standalone Mule Setup]
  ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
  ** xref:manage-performance.adoc[Manage Performance and Data Collection]
+* xref:visualizer-release-notes.adoc[Release Notes]
 * xref:visualizer-app-network.adoc[Visualizations by Use Case]
  ** xref:architecture-visualization.adoc[Architecture Visualization]
  ** xref:troubleshooting-visualization.adoc[Troubleshooting Visualization]
