--- a/modules/ROOT/pages/visualizer-release-notes.adoc
+++ b/modules/ROOT/pages/visualizer-release-notes.adoc
@@ -1,1 +1,1 @@
-include::release-notes::partials$visualizer/visualizer-rn-landing-page.adoc[]
+include::release-notes::partial$visualizer/visualizer-rn-landing-page.adoc[]
