--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,11 +1,11 @@
 .xref:index.adoc[Anypoint Visualizer]
-* xref:index.adoc[Anypoint Visualizer]
-* xref:setup.adoc[Set up Anypoint Visualizer]
+* xref:index.adoc[Visualizer]
+* xref:visualizer-release-notes.adoc[Release Notes]
+* xref:setup.adoc[Set up Visualizer]
  ** xref:cloudhub-setup.adoc[CloudHub Setup]
  ** xref:standalone-mule-setup.adoc[Standalone Mule Setup]
  ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
  ** xref:manage-performance.adoc[Manage Performance and Data Collection]
-* xref:visualizer-release-notes.adoc[Release Notes]
 * xref:visualizer-app-network.adoc[Visualizations by Use Case]
  ** xref:architecture-visualization.adoc[Architecture Visualization]
  ** xref:troubleshooting-visualization.adoc[Troubleshooting Visualization]
@@ -13,6 +13,6 @@
  ** xref:view.adoc[Views]
 * xref:customize-your-canvas.adoc[Customize the Canvas]
  ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
- ** xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
-* xref:troubleshoot-visualizer.adoc[Troubleshoot Anypoint Visualizer]
+ ** xref:use-tags-in-visualizer.adoc[Use Tags in Visualizer]
+* xref:troubleshoot-visualizer.adoc[Troubleshoot Visualizer]
 * xref:connection-metrics-compatibility.adoc[Supported Connection-Level Metrics]
